@@ -1,6 +1,10 @@
 2011-09-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
+	* testsuite/Makefile.am: Add testPool.
+	* testsuite/testPool.cpp: New file.
+
 	* include/mcs/Pool.h: New file.
 	(Pool): use pointer arithmetic.
+	(dmcs): use void*.
 
 	* src/mcs/Pool.cpp: Likewise.
 
